@@ -1,5 +1,10 @@
 2012-06-18  Sergio Martin <sergio.martin@artica.es>
 
+	* include/functions_menu.php: Added missed sec2 to the menu 
+	structure data. The main sec2 (not subsection). Clean code
+
+2012-06-18  Sergio Martin <sergio.martin@artica.es>
+
 	* include/ajax/menu.ajax.php: Added an ajax file to the functions
 	of menu category
 
